# simplepickle

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/simplepickle/: __init__.py  pickler.py
