[project]
name = "simplepickle"
version = "0.0.1"
authors = [
    { name = "artasov", email = "ivanhvalevskey@gmail.com" }
]
description = "The package allows you to quickly and easily use pickle as a cache."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/Artasov/simplepickle"
Issues = "https://github.com/Artasov/simplepickle/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
